# pdf2docx-cpp

./: .gitignore
cpp_pdf2docx/: CMakeLists.txt  CMakePresets.json  README.md
cpp_pdf2docx/cmake/: Dependencies.cmake
cpp_pdf2docx/include/pdf2docx/: build_info.hpp  converter.hpp  font.hpp  font_resolver.hpp  ir.hpp  ir_html.hpp  ir_json.hpp  status.hpp  types.hpp
cpp_pdf2docx/src/api/: converter.cpp
cpp_pdf2docx/src/backend/podofo/: podofo_backend.cpp  podofo_backend.hpp
cpp_pdf2docx/src/core/: ir_html.cpp  ir_json.cpp  status.cpp
cpp_pdf2docx/src/docx/: p0_writer.cpp  p0_writer.hpp
cpp_pdf2docx/src/font/: font_resolver.cpp  freetype_probe.cpp
cpp_pdf2docx/src/pipeline/: pipeline.cpp  pipeline.hpp
cpp_pdf2docx/tests/integration/: end_to_end_test.cpp
cpp_pdf2docx/tests/unit/: backend_test.cpp  build_info_test.cpp  converter_test.cpp  docx_anchor_test.cpp  docx_image_test.cpp  docx_math_test.cpp  docx_reflow_test.cpp  font_resolver_test.cpp  freetype_test.cpp  ir_html_image_test.cpp  ir_html_only_page_test.cpp  ir_html_test.cpp  ir_json_test.cpp  pipeline_test.cpp  status_test.cpp  test_pdf_fixture_test.cpp  writer_test.cpp
cpp_pdf2docx/tools/cli/: main.cpp
cpp_pdf2docx/tools/ir2html/: main.cpp
cpp_pdf2docx/tools/pdf2ir/: main.cpp
cpp_pdftools/: CMakeLists.txt  CMakePresets.json
cpp_pdftools/cmake/: Dependencies.cmake
cpp_pdftools/include/pdf2docx/: converter.hpp  ir.hpp  ir_html.hpp
cpp_pdftools/include/pdftools/: cli.hpp  error_handling.hpp  runtime.hpp  status.hpp  task.hpp  types.hpp
cpp_pdftools/include/pdftools/convert/: pdf2docx.hpp
cpp_pdftools/include/pdftools/pdf/: create_ops.hpp  document_ops.hpp  extract_ops.hpp
cpp_pdftools/scripts/: build_wasm_stub.sh
cpp_pdftools/src/app/: cli_app.cpp
cpp_pdftools/src/convert/pdf2docx/: pdf2docx.cpp
cpp_pdftools/src/core/: error_handling.cpp  status.cpp
cpp_pdftools/src/legacy_pdf2docx/api/: converter.cpp
cpp_pdftools/src/legacy_pdf2docx/backend/podofo/: podofo_backend.cpp  podofo_backend.hpp
cpp_pdftools/src/legacy_pdf2docx/docx/: p0_writer.cpp  p0_writer.hpp
cpp_pdftools/src/legacy_pdf2docx/font/: freetype_probe.cpp
cpp_pdftools/src/legacy_pdf2docx/pipeline/: pipeline.hpp
cpp_pdftools/src/pdf/: create_ops.cpp  document_ops.cpp  extract_ops.cpp
cpp_pdftools/src/runtime/: command_registry.cpp  task_runner.cpp
cpp_pdftools/src/wasm/: pdftools_wasm_capi.cpp
cpp_pdftools/tests/unit/: m0_runtime_test.cpp  m1_pdf2docx_test.cpp  m2_document_ops_test.cpp  m3_extract_ops_test.cpp  m4_create_ops_test.cpp  m5_cli_test.cpp  m6_task_runner_test.cpp  m7_error_handling_test.cpp
cpp_pdftools/tools/cli/: main.cpp
cpp_pdftools_gui/: CMakeLists.txt  CMakePresets.json
cpp_pdftools_gui/include/pdftools_gui/app/: main_window.hpp
cpp_pdftools_gui/include/pdftools_gui/models/: task_item_model.hpp
cpp_pdftools_gui/include/pdftools_gui/pages/: attachments_page.hpp  image_to_pdf_page.hpp  merge_page.hpp  page_edit_page.hpp  pdf2docx_page.hpp  settings_page.hpp  text_extract_page.hpp
cpp_pdftools_gui/include/pdftools_gui/services/: pdftools_service.hpp  preview_service.hpp  settings_service.hpp  task_manager.hpp  validation_service.hpp
cpp_pdftools_gui/include/pdftools_gui/widgets/: file_list_editor.hpp  path_picker.hpp  task_center_widget.hpp
cpp_pdftools_gui/src/app/: main.cpp  main_window.cpp
cpp_pdftools_gui/src/models/: task_item_model.cpp
cpp_pdftools_gui/src/pages/: attachments_page.cpp  image_to_pdf_page.cpp  merge_page.cpp  page_edit_page.cpp  pdf2docx_page.cpp  settings_page.cpp  text_extract_page.cpp
cpp_pdftools_gui/src/services/: pdftools_service.cpp  preview_service.cpp  settings_service.cpp  task_manager.cpp  validation_service.cpp
cpp_pdftools_gui/src/widgets/: file_list_editor.cpp  path_picker.cpp  task_center_widget.cpp
cpp_pdftools_gui/tests/: image_to_pdf_page_test.cpp  merge_page_test.cpp  page_edit_page_test.cpp  pdf2docx_page_test.cpp  pdftools_service_test.cpp  preview_service_test.cpp  settings_page_test.cpp  settings_service_test.cpp  task_center_widget_test.cpp  task_item_model_test.cpp  task_manager_test.cpp  text_extract_page_test.cpp
prompts/: exception_convention.md  formula-pdf-test-report-v1.md  formula-pdf-test-report-v2.md  formula-pdf-test-report-v3.md  formula-pdf-test-report-v4.md  formula-pdf-test-report-v5.md  llm_handoff.md  module-01-build-system.md  module-02-backend-podofo.md  module-03-ir-and-pipeline.md  module-04-font-system.md  module-05-docx-writer.md  module-06-api-and-cli.md  module-07-test-ci-release.md  module-08-image-pipeline.md  module-09-tools-and-debug.md  module-10-math-formula-docx.md  module-11-formula-optimization-v2.md  module-12-formula-optimization-v3.md  module-13-formula-optimization-v4.md  module-14-formula-handoff-v5.md  module-15-image-text-title-layout-fix-v1.md  module-16-native-wasm-exception-policy-v1.md  module-17-layout-paragraph-reflow-v1.md  module-18-layout-list-reflow-v1.md  module-19-layout-math-false-positive-guard-v1.md  module-20-msvc-validation-ci-v1.md  module-tasks-checklist.md  next_modules.md  pdftools-cli-gui-manual-test-todolist-v1.md  pdftools-cli-guide-v1.md  pdftools-failure-analysis-fix-v1.md  pdftools-gui-preview-roadmap-v1.md  pdftools-gui-qt6-design-v1.md  pdftools-gui-qt6-implementation-v1.md  (+28 more)
qt_pdftools/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
qt_pdftools/include/qt_pdftools/app/: main_window.hpp
qt_pdftools/include/qt_pdftools/backend/: backend_registry.hpp  native_lib_backend.hpp  task_backend.hpp
qt_pdftools/include/qt_pdftools/core/: app_settings.hpp  task_types.hpp
qt_pdftools/include/qt_pdftools/ui/: pdf_tab_view.hpp  settings_dialog.hpp
qt_pdftools/prompts/: qt-pdftools-edit-preview-roadmap-v1.md  qt-pdftools-edit-preview-roadmap-v2.md  qt-pdftools-gui-roadmap-v1.md  qt-pdftools-progress-v1.md
qt_pdftools/src/app/: main.cpp  main_window.cpp
qt_pdftools/src/backend/: backend_registry.cpp  native_lib_backend.cpp
qt_pdftools/src/core/: app_settings.cpp
qt_pdftools/src/ui/: pdf_tab_view.cpp  settings_dialog.cpp
web_pdftools/: main.js  (+8 more)
(+29 files in other folders)
